<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:title="@string/menu_beranda"
            android:icon="@drawable/icon_home"/>

        <item
            android:id="@+id/account"
            android:title="@string/menu_akun"
            android:icon="@drawable/icon_account" />

        <item
            android:id="@+id/about"
            android:title="@string/menu_tentang_kami"
            android:icon="@drawable/icon_about"/>

        <item
            android:id="@+id/faq"
            android:title="@string/menu_faq"
            android:icon="@drawable/icon_faq"/>

        <item
            android:id="@+id/help"
            android:title="@string/menu_pusat_bantuan"
            android:icon="@drawable/icon_help"/>
    </group>
</menu>