<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.LoginActivity"
    android:padding="30dp">

  <ImageView
      android:id="@+id/back"
      android:layout_width="wrap_content"
      android:layout_height="20dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.0"
      app:srcCompat="@drawable/icon_back" />

  <TextView
      android:id="@+id/textView2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:text="@string/text_login1"
      android:fontFamily="@font/bold"
      android:textColor="@color/black"
      android:textSize="26sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/back" />

  <TextView
      android:id="@+id/textView3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="2dp"
      android:text="@string/text_login2"
      android:fontFamily="@font/light"
      android:textColor="@color/grey"
      android:textSize="18sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView2" />

  <com.rengwuxian.materialedittext.MaterialEditText
      android:id="@+id/email"
      android:layout_width="280dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:inputType="textEmailAddress"
      app:met_floatingLabel="highlight"
      app:met_floatingLabelText="@string/email"
      app:met_floatingLabelTextColor="@color/grey"
      app:met_textColorHint="@color/grey"
      android:textColor="@color/purle"
      android:hint="@string/email"
      android:fontFamily="@font/light"
      android:textSize="12sp"
      app:met_underlineColor="@color/purle"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView3" />

  <com.rengwuxian.materialedittext.MaterialEditText
      android:id="@+id/password"
      android:layout_width="280dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:inputType="textPassword"
      app:met_floatingLabel="highlight"
      app:met_floatingLabelText="@string/password"
      app:met_floatingLabelTextColor="@color/grey"
      app:met_textColorHint="@color/grey"
      android:textColor="@color/purle"
      android:hint="@string/password"
      android:fontFamily="@font/light"
      android:textSize="12sp"
      app:met_underlineColor="@color/purle"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/email" />

  <ImageView
      android:id="@+id/but_masuk"
      android:layout_width="wrap_content"
      android:layout_height="40dp"
      android:layout_marginTop="25dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/password"
      app:srcCompat="@drawable/but_masuk_ungu" />

  <TextView
      android:id="@+id/lupasandi"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="15dp"
      android:text="@string/lupa_sandi"
      android:fontFamily="@font/light"
      android:textColor="@color/grey"
      android:textSize="18sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/but_masuk" />

  <TextView
      android:id="@+id/daftar"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/tidak_punya_akun_daftar_yuk"
      android:fontFamily="@font/regular"
      android:textColor="@color/grey"
      android:textSize="18sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

  <ProgressBar
      android:id="@+id/progressbarl"
      style="?android:attr/progressBarStyleHorizontal"
      android:layout_width="75dp"
      android:layout_height="wrap_content"
      android:indeterminate="true"
      android:theme="@style/progressbar"
      android:visibility="gone"
      app:layout_constraintBottom_toTopOf="@+id/daftar"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/lupasandi"
      app:layout_constraintVertical_bias="0.2" />

</androidx.constraintlayout.widget.ConstraintLayout>